--- a/app/templates/comments_app/index.html
+++ b/app/templates/comments_app/index.html
@@ -1,4 +1,24 @@
 {% extends 'base.html' %}
 {%block content %}
-<h1>Hi,{{name}}</h1>
+<form method="post">
+    {% csrf_token %}
+    <div class="form-group">
+      {{ form.user_name.label_tag }}
+      {{ form.user_name }}
+    </div>
+    <div class="form-group">
+      {{ form.email.label_tag }}
+      {{ form.email }}
+    </div>
+    <div class="form-group">
+      {{ form.homepage.label_tag }}
+      {{ form.homepage }}
+    </div>
+    <div class="form-group">
+      {{ form.text.label_tag }}
+      {{ form.text }}
+    </div>
+    <button type="submit">Submit</button>
+</form>
+  
 {% endblock %}
