--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,12 +1,16 @@
+{%load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{%static 'css/style.css'%}">
     <title>Comments App</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     {%block content%}
     {%endblock%}
+    <script src="{% static 'js/comments.js' %}"></script>
 </body>
 </html>
