--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -18,3 +18,14 @@
 .add-comment-button {
     margin-top: 20px;
 }
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  .button:hover {
+    background-color: #0056b3;
+  }
