--- a/app/templates/comments_app/home.html
+++ b/app/templates/comments_app/home.html
@@ -1,25 +1,46 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<canvas id="resize-canvas" style="display:none;"></canvas>
 <h1>Комментарии</h1>
-
+<a href="/comments" class="button">Таблица комментариев</a>
+<button class="add-comment-button">Добавить комментарий</button>
 <ul id="comment-list">
-    {% for comment in comments %}
+    {% for comment in page_obj %}
         {% include 'comments_app/comment_item.html' with comment=comment %}
     {% endfor %}
 </ul>
 
-<button class="add-comment-button">Добавить комментарий</button>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
+
 
 <div id="comment-form-container" style="display: none;">
     <h2>Добавить комментарий</h2>
-    <form id="comment-form" method="post">
+    <form id="comment-form"  method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Добавить комментарий</button>
+        <button type="submit">Отправить</button>
     </form>
 </div>
 <script>
     const commentUrl = "{% url 'comment' %}";
 </script>
 {% endblock %}
+
