--- a/app/templates/comments_app/comment_item.html
+++ b/app/templates/comments_app/comment_item.html
@@ -1,16 +1,21 @@
 <li class="comment-box" id="comment-{{ comment.id }}">
     <span class="user-name">{{ comment.user_name }}</span>
-    <p>{{ comment.text }}</p>
+    <p>{{ comment.text|safe }}</p>
     {% if comment.image %}
         <img src="{{ comment.image.url }}" alt="comment image">
     {% endif %}
     {% if comment.text_file %}
-        <a href="{{ comment.text_file.url }}" target="_blank">Download Text File</a>
+        <a href="{{ comment.text_file.url }}" target="_blank">Скачать текстовый файл</a>
     {% endif %}
     <button class="reply-button" data-comment-id="{{ comment.id }}">Ответить</button>
     {% if not comment.parent_comment and comment.replies.exists %}
         <button class="toggle-replies-button" data-comment-id="{{ comment.id }}">Посмотреть комментарии</button>
     {% endif %}
+
+    <div class="preview-container" id="preview-{{ comment.id }}" style="display: none;">
+        <p class="preview-text"></p>
+        <img class="preview-image" src="" alt="Preview Image" style="max-width: 320px; max-height: 240px;">
+    </div>
 
     {% if comment.replies.all %}
         <ul class="replies" id="replies-{{ comment.id }}" style="display: none;" data-comment-id="{{ comment.id }}">
