--- a/app/templates/comments_app/home.html
+++ b/app/templates/comments_app/home.html
@@ -51,6 +51,6 @@
     </div>
 </div>
 <script>
-    const commentUrl = "{% url 'comment' %}";
+    const commentUrl = "{% url 'upload_files' %}";
 </script>
 {% endblock %}
