final main(NO CSS)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="{%static 'css/style.css'%}">
     <title>Comments App</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsonwebtoken/8.5.1/browser/jsonwebtoken.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/10.5.20/jsrsasign-all-min.js"></script>
+    
+
+
 </head>
 <body>
     {%block content%}
     {%endblock%}
     <script src="{% static 'js/comments.js' %}"></script>
+    
 </body>
 </html>
